--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
       }
 
       httpGetAsync('http://127.0.0.1:5000/games', function(response) {
-        alert(response);
+        console.log(response);
       })
 
     </script>
